--- a/notebooks/abundance_post_processing.Rmd
+++ b/notebooks/abundance_post_processing.Rmd
@@ -9,7 +9,8 @@ library(vegan)
 ```
 Cargar datos de abundancia
 ```{r}
-count_data <- read_tsv("abundance_table_genus_silva.tsv", show_col_types = FALSE)
+count_data <- read_tsv("abundance_table_genus_silva.tsv", show_col_types = FALSE) %>%
+  column_to_rownames("tax")
 ```
 
 
@@ -18,7 +19,6 @@ count_data <- read_tsv("abundance_table_genus_silva.tsv", show_col_types = FALSE
 Eliminar taxones que tengan < 0.01% en todas las muestras
 ```{r}
 count_data_filtered <- count_data %>%
-  column_to_rownames("tax") %>%
   select(-total, -starts_with("Unclassified")) %>%
   filter_all(any_vars(. / sum(.) > 0.0001))  %>%
   as.data.frame() 
@@ -35,6 +35,7 @@ colSums(count_data_filtered)
 Guardar datos filtrados
 ```{r}
 count_data_filtered %>%
+  rownames_to_column("tax") %>%
   write_tsv("abundance_table_genus_silva_filtered.tsv")
 ```
 
@@ -50,6 +51,7 @@ count_data_normalized <- decostand(count_data_filtered, method = "total")
 Guardar datos normalizados
 ```{r}
 count_data_normalized %>%
+  rownames_to_column("tax") %>%
   write_tsv("abundance_table_genus_silva_normalized.tsv")
 ```
 
